# Study

./: aboba.txt
OOP/1 Year 2 Sem/lab1/: main.cpp  myStrings.txt  shapes.cpp  shapes.h
OOP/1 Year 2 Sem/lab1 (Complete)/: main.cpp  tests.txt
OOP/1 Year 2 Sem/lab1 (Complete)/BL/: GeometryCalculator.cpp
OOP/1 Year 2 Sem/lab1 (Complete)/UI/: IInputOutputUI.h  ShapeParametersVisitor.cpp  ShapeParametersVisitor.h  ShapePerimeterVisitor.h  ShapeTextCatalog.cpp  ShapeTypeVisitor.cpp  UiMessageCatalog.cpp
OOP/1 Year 2 Sem/lab1/App/: AppController.cpp  AppController.h
OOP/1 Year 2 Sem/lab1/BL/: FunctionsHandler.cpp  FunctionsHandler.h  GeometryCalculator.h  ShapeVisitor.h  Shapes.cpp  Shapes.h
OOP/1 Year 2 Sem/lab1/MainLogic/: Visitor.cpp  Visitor.h  shapes.cpp  shapes.h
OOP/1 Year 2 Sem/lab1/Service/: ErrorService.cpp  ErrorService.h  IShapeService.h  ShapeService.cpp  ShapeService.h
OOP/1 Year 2 Sem/lab1/UI/: ConsoleUi.cpp  ConsoleUi.h  IInputOutputUI.h  IUi.h  InputOutputUI.cpp  InputOutputUI.h  ShapeParametersVisitor.cpp  ShapePerimeterVisitor.cpp  ShapeTextCatalog.cpp  ShapeTextCatalog.h  ShapeTypeVisitor.h  UI.cpp  UI.h  UiMessageCatalog.cpp  UiMessageCatalog.h  menuFunctions.cpp  menuFunctions.h
OOP/1 Year 2 Sem/lab2 (Complete)/: main.cpp
OOP/1 Year 2 Sem/lab2 (Complete)/moduleTests/: testFramework.h  tests.cpp  tests.h
OOP/1 Year 2 Sem/lab2 (Complete)/setContainer/: iterator.cpp  iterator.h  setContainer.cpp
OOP/1 Year 2 Sem/lab3/: CMakeLists.txt
OOP/1 Year 2 Sem/lab3 (Complete)/: main.cpp
OOP/1 Year 2 Sem/lab3 (Complete)/BL/: Calculator.cpp  CalculatorFacade.cpp  CalculatorFacade.h
OOP/1 Year 2 Sem/lab3 (Complete)/GUI/: DisplayValue.cpp  DisplayValue.h  (+1 more)
OOP/1 Year 2 Sem/lab3/AppController/: AppController.cpp  AppController.h
OOP/1 Year 2 Sem/lab3/AppController/Commands/: CalculateCommand.cpp  CalculateCommand.h  DeleteCommand.cpp  EnterTokenCommand.cpp  EnterTokenCommand.h  MemoryClearCommand.h  MemoryMinusCommand.cpp  MemoryMinusCommand.h  MemoryPlusCommand.cpp  MemoryPlusCommand.h  MemoryRecallCommand.cpp  MemoryRecallCommand.h
OOP/1 Year 2 Sem/lab3/BL/: CalculationContext.cpp  CalculationContext.h  Calculator.h
OOP/1 Year 2 Sem/lab3/BL/Exceptions/: AppException.cpp  ExceptionHandler.cpp  ExceptionHandler.h
OOP/1 Year 2 Sem/lab3/BL/Operations/: Cos.cpp  Cos.h  Cotan.cpp  Cotan.h  Division.h  Minus.cpp  Multiplie.h  Operations.h  Plus.cpp  Sin.h  SquareRoot.cpp  Tan.cpp
OOP/1 Year 2 Sem/lab3/GUI/: mainwindow.cpp  mainwindow.ui
OOP/1 Year 2 Sem/lab5/: CMakeLists.txt
OOP/1 Year 2 Sem/lab5 (In Progress)/: CMakeLists.txt
OOP/1 Year 2 Sem/lab5/GUI/: mainwindow.h  mainwindow.ui
OOP/lab1/: myStrings.txt  tests.txt
OOP/lab1/App/: AppController.cpp  AppController.h
OOP/lab1/BL/: GeometryCalculator.cpp  GeometryCalculator.h  ShapeVisitor.h  Shapes.cpp  Shapes.h
OOP/lab1/Service/: ErrorService.cpp  ErrorService.h  IShapeService.h  ShapeService.cpp  ShapeService.h
OOP/lab1/UI/: ConsoleUi.cpp  ConsoleUi.h  IInputOutputUI.h  IUi.h  InputOutputUI.cpp  InputOutputUI.h  ShapeParametersVisitor.cpp  ShapeParametersVisitor.h  ShapePerimeterVisitor.cpp  ShapePerimeterVisitor.h  ShapeTextCatalog.cpp  ShapeTextCatalog.h  ShapeTypeVisitor.cpp  ShapeTypeVisitor.h  UiMessageCatalog.cpp  UiMessageCatalog.h
OOP/lab2/: main.cpp
OOP/lab2/moduleTests/: testFramework.h  tests.cpp  tests.h
OOP/lab2/setContainer/: iterator.h  setContainer.cpp  setContainer.h
OP/1 Year 1 Sem/lab-1(Complete)/: lab-1_1.c  lab-1_2.c
OP/1 Year 1 Sem/lab-10_1(Complete)/: main.c  studentTools.c  studentTools.h
OP/1 Year 1 Sem/lab-10_2(Complete)/: main.c  studentTools.c  studentTools.h
OP/1 Year 1 Sem/lab-11_1(Complete)/: aboba.txt  amogus.txt  fileFunctions.c  fileFunctions.h  main.c  memory.c  memory.h  strFunctions.c  strFunctions.h
OP/1 Year 1 Sem/lab-11_2(Complete)/: baseFunctions.c  baseFunctions.h  books.txt  fileFunctions.c  fileFunctions.h  main.c  memory.c  memory.h
OP/1 Year 1 Sem/lab-12/: baseFunctions.c  fileTools.c  fileTools.h
OP/1 Year 1 Sem/lab-12(Complete)/: baseFunctions.h  main_1.c  main_2.c
OP/1 Year 1 Sem/lab-2(Complete)/: lab-2.c
OP/1 Year 1 Sem/lab-3(Complete)/: main-1.c  main-2.c
OP/1 Year 1 Sem/lab-4(Complete)/: main.c
OP/1 Year 1 Sem/lab-5(Complete)/: arrayTools.c  arrayTools.h  main.c
OP/1 Year 1 Sem/lab-6(Complete)/: arrayTools.c  arrayTools.h  main_1.c  main_2.c
OP/1 Year 1 Sem/lab-7(Complete)/: arrayTools.c  arrayTools.h  main.c
OP/1 Year 1 Sem/lab-8(Complete)/: main_1.c  main_2.c  myString.c  myString.h
OP/1 Year 1 Sem/lab-9_1(Complete)/: main.c  memory.c  memory.h  strProccessFunctions.c  strProccessFunctions.h
OP/1 Year 1 Sem/lab-9_2(Complete)/: main.c  strProccessFunctions.c  strProccessFunctions.h
OP/1 Year 2 Sem/Aboba/: CMakeCache.txt  CMakeLists.txt
OP/1 Year 2 Sem/Aboba/logic/: Aboba.code-workspace  logic.c  logic.h
OP/1 Year 2 Sem/Aboba/ui/: app_controller.cpp  app_controller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OP/1 Year 2 Sem/lab1/: CMakeLists.txt
OP/1 Year 2 Sem/lab1 (Complete)/: main.cpp
OP/1 Year 2 Sem/lab1/BL/: conversionMain.c  conversionMain.h  conversionTypes.h  errorHandler.c  numberFormatter.c  numberFormatter.h  numberParser.c  numberParser.h  stringUtils.c  stringUtils.h
OP/1 Year 2 Sem/lab1/GUI/: appController.cpp  appController.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OP/1 Year 2 Sem/lab1/logic/: logic.c  logic.h
OP/1 Year 2 Sem/lab1/ui/: app_controller.cpp  app_controller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OP/1 Year 2 Sem/lab2-3/: CMakeLists.txt
OP/1 Year 2 Sem/lab2-3 (Complete)/: CMakeLists.txt  main.cpp
OP/1 Year 2 Sem/lab2-3/AppController/: appController.cpp
OP/1 Year 2 Sem/lab2-3/BL/: calculator.c  chartHandler.h  errorHandler.h  mainStructures.h  memoryHandler.h  tableHandler.h
OP/1 Year 2 Sem/lab2-3/GUI/: chartConstants.h  chartGeometry.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1/: main.cpp
lab1/BL/: Shapes.cpp
lab1/Service/: ShapeService.cpp
lab1/UI/: ConsoleUi.cpp  ConsoleUi.h  IUi.h  InputOutputUI.h
(+63 files in other folders)
